# django-query-limiter

./: LICENSE  Makefile  README.md  pyproject.toml  query_limiter.py  requirements.txt
src/query_limiter/: __init__.py  exceptions.py  formatting.py  limiter.py  query.py
