[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-query-limiter"
version = "0.0.1"
description = "Limit django query amounts in a certain scope"
readme = "README.md"
authors = [{ name = "Raven De Vooght" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = ["django"]

[project.urls]
Homepage = "https://github.com/TWRaven/django-query-limiter"
